--- a/Final_biodiversity_analysis.ipynb
+++ b/Final_biodiversity_analysis.ipynb
@@ -18,19 +18,29 @@
    "source": [
     "Instructions\n",
     "\n",
-    "Data access:\n",
-    "BII data: This dataset is part of the MPC STAC catalog. You will need to access the ‘io-biodiversity’ collection and look for the 2017 and 2020 rasters covering Phoenix subdivision. You can use the following coordinates for a bounding box: \n",
+    "1. Data access:\n",
+    "\n",
+    "- a: BII data: This dataset is part of the MPC STAC catalog. You will need to access the ‘io-biodiversity’ collection and look for the 2017 and 2020 rasters covering Phoenix subdivision. You can use the following coordinates for a bounding box: \n",
     "[-112.826843, 32.974108, -111.184387, 33.863574]\n",
-    "Phoenix subdivision: You will find the Phoenix subdivision polygon in the Census County Subdivision shapefiles for Arizona: https://www.census.gov/cgi-bin/geo/shapefiles/index.php?year=2022&layergroup=County+Subdivisions\n",
+    "- b: Phoenix subdivision: You will find the Phoenix subdivision polygon in the Census County Subdivision shapefiles for Arizona: https://www.census.gov/cgi-bin/geo/shapefiles/index.php?year=2022&layergroup=County+Subdivisions\n",
     "\n",
-    "Create a map showing the Phoenix subdivision within an appropriate geographical context. You may use any vector datasets to create your map. (You can also check out the contextily package.)\n",
+    "2. Create a map showing the Phoenix subdivision within an appropriate geographical context. You may use any vector datasets to create your map. (You can also check out the contextily package.)\n",
     "\n",
-    "Calculate the percentage of area of the Phoenix subdivision with a BII of at least 0.75 in 2017. Obtain the same calculation for 2020.\n",
-    "HINTS (useful or not depending on your workflow): \n",
-    "Let x be an xarray.DataArray. We can select all the values greater than n by simply doing x>n. This will return an xarray.DataArray with boolean values. You can then transform this into an xarray.DataArray with 0s and 1s (instead of True/False) by casting it as type ‘int’. \n",
-    "To calculate the percentage area: (pixels in class)/(total pixels) * 100. \n",
+    "3. Calculate the percentage of area of the Phoenix subdivision with a BII of at least 0.75 in 2017. Obtain the same calculation for 2020. HINTS (useful or not depending on your workflow): Let x be an xarray.DataArray. We can select all the values greater than n by simply doing x>n. This will return an xarray.DataArray with boolean values. You can then transform this into an xarray.DataArray with 0s and 1s (instead of True/False) by casting it as type ‘int’. To calculate the percentage area: (pixels in class)/(total pixels) * 100. \n",
     "\n",
-    "Create a visualization showing the area with BII>=0.75 in 2017 that was lost by 2020. Here’s an example:\n"
+    "4. Create a visualization showing the area with BII>=0.75 in 2017 that was lost by 2020. Here’s an example:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3897dba7-e4be-448a-b1ef-2426ba98ca29",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#calling in all the packages i might need\n"
    ]
   }
  ],
