checking if gitignore worked

--- a/Final_biodiversity_analysis.ipynb
+++ b/Final_biodiversity_analysis.ipynb
@@ -4684,7 +4684,7 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "phoenix.plot(ax = ax)\n",
-    "az_17.plot(ax = ax) #use .where()"
+    "az_17.plot(ax = ax) "
    ]
   }
  ],
